FE-375: fix vertical align in pay-btn

--- a/src/payframe/styles/payform.scss
+++ b/src/payframe/styles/payform.scss
@@ -202,9 +202,13 @@
 
         &--label {
             max-width: 120px;
-            display: inline-flex;
+            display: inline-block;
             white-space: nowrap;
             overflow: hidden;
+        }
+
+        span {
+            vertical-align: top;
         }
     }
 
